--- a/BLAZAMGui/UI/Inputs/UnsavedChangesPrompt.razor
+++ b/BLAZAMGui/UI/Inputs/UnsavedChangesPrompt.razor
@@ -15,7 +15,7 @@
 
             <MudTooltip Text="@AppLocalization["Save Changes"]">
                 <MudFab Color=Color.Success
-                        Icon="@Icons.Material.Filled.SaveAlt"
+                        Icon="@Icons.Material.Filled.Save"
                         OnClick="@(()=>{SaveChanges.InvokeAsync();})" />
             </MudTooltip>
 
