--- a/BLAZAM/_Imports.razor
+++ b/BLAZAM/_Imports.razor
@@ -23,6 +23,8 @@
 @using BLAZAM.Pages.Computers;
 @using BLAZAM.Pages.Groups;
 @using BLAZAM.Pages.OU;
+@using BLAZAM.Pages.Printers;
+
 @using BLAZAM.Server.Pages
 
 @using BLAZAM
