--- a/BLAZAMGui/Layouts/DirectoryConnectingIndicator.razor
+++ b/BLAZAMGui/Layouts/DirectoryConnectingIndicator.razor
@@ -1,13 +1,13 @@
 @inherits AppComponentBase
-@if (Monitor.DirectoryConnected == ServiceConnectionState.Connecting)
+@if (Monitor.DirectoryConnectionStatus == ServiceConnectionState.Connecting)
 {
-    <div Padding="Padding.Is3.OnX">
+    <MudAlert Class="mud-alert-filled-warning">
 
         <Row>
             Connecting to Active Directory... Some features are disabled...
-            <Progress Animated=true Value="100" />
+            <MudProgressLinear Indeterminate=true/>
         </Row>
-    </div>
+    </MudAlert>
 }
 
 @code {
