--- a/BLAZAMGui/Navs/NavMenu.razor
+++ b/BLAZAMGui/Navs/NavMenu.razor
@@ -17,7 +17,7 @@
         <MudNavLink Href="/home" Icon="@Icons.Material.Filled.Dashboard">@AppLocalization["Home"]</MudNavLink>
         <MudNavLink Href="/browse" Icon="@Icons.Material.Filled.ViewList">@AppLocalization["Browse"]</MudNavLink>
         <AuthorizeView Context="createContext" Roles=@createRole>
-            <MudNavGroup Icon="@Icons.Material.Filled.Create" Title="@AppLocalization["Create"]" Expanded="false" Disabled=@(Monitor.DirectoryConnected != ServiceConnectionState.Up)>
+            <MudNavGroup Icon="@Icons.Material.Filled.Create" Title="@AppLocalization["Create"]" Expanded="false" Disabled=@(Monitor.DirectoryConnectionStatus != ServiceConnectionState.Up)>
                 <AuthorizeView Roles="@UserRoles.CreateUsers">
                     <MudNavLink Href="/users/create">@AppLocalization["Create User"]</MudNavLink>
                 </AuthorizeView>
@@ -32,7 +32,7 @@
         <AuthorizeView Roles=@UserRoles.SuperAdmin>
             <MudNavLink Href="/recyclebin"
                         Icon="@Icons.Material.Filled.DeleteOutline"
-                        Disabled=@(Monitor.DirectoryConnected != ServiceConnectionState.Up)>
+                        Disabled=@(Monitor.DirectoryConnectionStatus != ServiceConnectionState.Up)>
                 @AppLocalization["Recycle Bin"]
             </MudNavLink>
 
