--- a/BLAZAMGui/UI/Computers/ComputerDriveDetails.razor
+++ b/BLAZAMGui/UI/Computers/ComputerDriveDetails.razor
@@ -44,10 +44,12 @@ else
 
     protected override void OnInitialized()
     {
-
-        Task.Run(async () =>
+        if (Computer.IsOnline==true)
         {
-            Drives = await Computer.GetDrivesAsync();
+            GetDriveData();
+        }
+        Computer.OnOnlineChanged += (async(status) => {
+            if (status == true) GetDriveData(); 
             await InvokeAsync(StateHasChanged);
 
         });
@@ -56,5 +58,14 @@ else
         base.OnInitialized();
 
 
+    }
+    private void GetDriveData()
+    {
+        Task.Run(async () =>
+           {
+               Drives = await Computer.GetDrivesAsync();
+               await InvokeAsync(StateHasChanged);
+
+           });
     }
 }
