--- a/BLAZAM/_Imports.razor
+++ b/BLAZAM/_Imports.razor
@@ -24,6 +24,9 @@
 @using BLAZAM.Pages.Groups;
 @using BLAZAM.Pages.OU;
 @using BLAZAM.Pages.Printers;
+@using BLAZAM.Pages.Browse;
+
+
 
 @using BLAZAM.Server.Pages
 
@@ -56,6 +59,7 @@
 @using BLAZAM.Gui.Layouts;
 @using BLAZAM.Gui.UI.Settings;
 @using BLAZAM.Gui.UI.Chat
+@using BLAZAM.Gui.UI.Search
 @using BLAZAM.Gui.UI.Modals
 
 @using BLAZAM.Gui.UI.Groups
