--- a/BLAZAM/_Imports.razor
+++ b/BLAZAM/_Imports.razor
@@ -31,6 +31,7 @@
 @using BLAZAM.Server.Pages
 
 @using BLAZAM
+@using BLAZAM.Jobs
 
 @using BLAZAM.ActiveDirectory;
 @using BLAZAM.ActiveDirectory.Interfaces;
