--- a/BLAZAMGui/UI/OU/RenameOUModalContent.razor
+++ b/BLAZAMGui/UI/OU/RenameOUModalContent.razor
@@ -34,7 +34,7 @@
 
     async void SaveChanges()
     {
-        SnackBarService.Warning("The ou has been renamed but changes must be saved.", "OU renamed");
+        SnackBarService.Warning("The ou has been renamed but changes must be saved.");
         Close();
 
     }
