--- a/BLAZAMGui/UI/Users/ChangeUserPasswordModalContent.razor
+++ b/BLAZAMGui/UI/Users/ChangeUserPasswordModalContent.razor
@@ -48,14 +48,14 @@
         {
 
 
-            SnackBarService.Success("Changed password for " + User.DisplayName, "Password Changed");
+            SnackBarService.Success("Changed password for " + User.DisplayName);
             await AuditLogger.User.PasswordChanged(User, requireChangeSwitch.Checked);
             Close();
 
         }
         else
         {
-            SnackBarService.Error("Unable to set password for " + User.DisplayName, "Change Failed");
+            SnackBarService.Error("Unable to set password for " + User.DisplayName);
 
         }
     }
