--- a/BLAZAM/Pages/Groups/ConfirmNewGroup.razor
+++ b/BLAZAM/Pages/Groups/ConfirmNewGroup.razor
@@ -25,7 +25,7 @@
     {
         if (await MessageService.Confirm("Are you sure you want to create this OU?", "Create OU"))
         {
-            Group.CommitChanges();
+            await Group.CommitChangesAsync();
             SnackBarService.Success("Group created");
             await Confirmed.InvokeAsync(Group);
             Nav.NavigateTo("/groups/create",true);
