--- a/BLAZAM/Pages/OU/ConfirmNewOU.razor
+++ b/BLAZAM/Pages/OU/ConfirmNewOU.razor
@@ -25,7 +25,7 @@
     {
         if (await MessageService.Confirm("Are you sure you want to create this OU?", "Create OU"))
         {
-            OU.CommitChanges();
+            await OU.CommitChangesAsync();
             SnackBarService.Success("OU created");
             await Confirmed.InvokeAsync(OU);
             Nav.NavigateTo("/ou/create",true);
