--- a/BLAZAMGui/UI/Dev/DevTools.razor
+++ b/BLAZAMGui/UI/Dev/DevTools.razor
@@ -8,7 +8,7 @@
         <MudText Typo="Typo.h6">Dev Tools</MudText>
 
         <MudButton Color="Color.Primary" style="height:35px;" OnClick="@(()=>
-            {SnackBarService.Success("Test Notification " + Guid.NewGuid(),"Test");
+            {SnackBarService.Success("Test Notification " + Guid.NewGuid());
             })">Test Notification</MudButton>
         <MudButton Color="Color.Primary" style="height:35px;" OnClick="@(()=>{SnackbarBroadcastService.Success("Test Broadcast " + Guid.NewGuid(),"Test");})">Test Broadcast</MudButton>
         <MudButton Color="Color.Primary" style="height:35px;" OnClick=TestNotificationBroadcast>Test Notification Broadcast</MudButton>
