--- a/BLAZAMGui/UI/Groups/AssignToModalContent.razor
+++ b/BLAZAMGui/UI/Groups/AssignToModalContent.razor
@@ -140,7 +140,7 @@
                     DirectoryModel.AssignTo(gr);
                 }
             }
-            SnackBarService.Warning(DirectoryModel.CanonicalName + " has been assigned to the selected group(s) but changes must be saved.", "Assignment Pending");
+            SnackBarService.Warning(DirectoryModel.CanonicalName + " has been assigned to the selected group(s) but changes must be saved.");
             await ModelChanged.InvokeAsync();
 
             Close();
@@ -153,7 +153,7 @@
                 DirectoryModel.AssignTo(g);
 
             }
-            SnackBarService.Warning(DirectoryModel.CanonicalName + " has been assigned to the selected groups but changes must be saved.", "Assignment Pending");
+            SnackBarService.Warning(DirectoryModel.CanonicalName + " has been assigned to the selected groups but changes must be saved.");
             await ModelChanged.InvokeAsync();
 
             Close();
