--- a/BLAZAMGui/UI/Groups/AssignedGroup.razor
+++ b/BLAZAMGui/UI/Groups/AssignedGroup.razor
@@ -90,7 +90,7 @@
     {
 
         Member.UnassignFrom(Group);
-        SnackBarService.Warning(Member.CanonicalName + " removed from " + Group.CanonicalName + ". Don't forget to save your changes.", "Sucess");
+        SnackBarService.Warning(Member.CanonicalName + " removed from " + Group.CanonicalName + ". Don't forget to save your changes.");
 
         await OnGroupMembershipChange.InvokeAsync(new GroupMembershipChange(Member, Group));
 
