--- a/BLAZAMGui/UI/Groups/RenameGroupModalContent.razor
+++ b/BLAZAMGui/UI/Groups/RenameGroupModalContent.razor
@@ -41,12 +41,12 @@
     async Task SaveChanges()
     {
         if(GroupName.IsNullOrEmpty()){
-            SnackBarService.Warning("You must provide a group name", "Group name");
+            SnackBarService.Warning("You must provide a group name");
             GroupName = Group.CanonicalName;
         }
         try{
             Group.Rename(GroupName);
-            SnackBarService.Success("The group has been renamed.", "Group renamed");
+            SnackBarService.Success("The group has been renamed.");
             
             Close();
         }
@@ -54,7 +54,7 @@
         {
             Loggers.ActiveDirectryLogger.Error("Error attempting to rename a group");
             Loggers.ActiveDirectryLogger.Error(ex.Message,ex);
-            SnackBarService.Error("The group could not be renamed.", "Group renamed");
+            SnackBarService.Error("The group could not be renamed.");
         }
 
     }
