--- a/BLAZAMGui/_Imports.razor
+++ b/BLAZAMGui/_Imports.razor
@@ -53,6 +53,8 @@
 @using BLAZAM.Gui.UI.Settings
 @using BLAZAM.Gui.UI.Settings.Templates
 @using BLAZAM.Gui.UI.Inputs
+@using BLAZAM.Gui.UI.Search
+
 @using BLAZAM.Gui.Layouts
 @using BLAZAM.Gui.UI.Outputs
 @using BLAZAM.Gui.UI.Settings.Permissions
