Added display of shared printers

--- a/BLAZAM/Pages/_Layout.cshtml
+++ b/BLAZAM/Pages/_Layout.cshtml
@@ -78,6 +78,7 @@
         </script>
     }
     <script src="~/js/blazam.js"></script>
+    <script src="~/lib/svg-gauge/dist/gauge.min.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="_content/MudBlazor.Markdown/MudBlazor.Markdown.min.js"></script>
 
