--- a/BLAZAMGui/UI/Computers/ComputerResourceCharts.razor
+++ b/BLAZAMGui/UI/Computers/ComputerResourceCharts.razor
@@ -2,12 +2,20 @@
 @if (Computer.IsOnline == true)
 {
     <DialGuage Title="CPU" PollFunc="@(()=>{return Computer.Processor;})" />
+
+    <MudTooltip Text="@AppLocalization["CPU Chart"]">
+        <MudIconButton Style="width:75px;height:75px;" Size="Size.Large" Icon="@Icons.Material.Filled.History" OnClick="@(()=>{showCPUChart=!showCPUChart;})" />
+    </MudTooltip>
     <DialGuage Title="RAM" PollFunc="@(()=>{return Computer.MemoryUsedPercent;})" />
-
-    <LiveChart Enabled=@(Computer.IsOnline==true) SeriesName="CPU Usage" Title="Live CPU Usage" History="30" PollFunc="@(()=>{return Computer.Processor;})" />
-
-    <LiveChart Enabled=@(Computer.IsOnline==true) SeriesName="Memory Usage" Title="Live RAM Usage" History="30" PollFunc="@(()=>{return Computer.MemoryUsedPercent;})" />
-
+    <MudIconButton Style="width:75px;height:75px;" Size="Size.Large" Icon="@Icons.Material.Filled.History" OnClick="@(()=>{showRAMChart=!showRAMChart;})" />
+    @if (showCPUChart)
+    {
+        <LiveChart Enabled=@(Computer.IsOnline==true) SeriesName="CPU Usage" Title="Live CPU Usage" History="30" PollFunc="@(()=>{return Computer.Processor;})" />
+    }
+    @if (showRAMChart)
+    {
+        <LiveChart Enabled=@(Computer.IsOnline==true) SeriesName="Memory Usage" Title="Live RAM Usage" History="30" PollFunc="@(()=>{return Computer.MemoryUsedPercent;})" />
+    }
 }
 else
 {
@@ -16,4 +24,6 @@ else
 
 
 @code {
+    private bool showCPUChart = false;
+    private bool showRAMChart = false;
 }
